--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+	<style>
+video {
+  width: 100%;
+  height: auto;
+}
+</style>
 </head>
 <body>
 	<h1 class="text-center mt-3">Unique Biologist</h1>
 	<hr class="w-50">
 	<p class="text-center">This Website is for Download long videos</p>
-	<video controls preload="none">
+	<video width="400" controls>
   <source src="bio.mp4" type="video/mp4">
 </video>
 
