--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ video {
 <body>
 	<h1 class="text-center mt-3">Unique Biologist</h1>
 	<hr class="w-50">
-	<p class="text-center">This Website is for Download long videos</p>
+	<p class="text-center">This Website is for Download long videos of 12th science biology</p>
 	<video width="400" controls>
   <source src="bio.mp4" type="video/mp4">
 </video>
