--- a/index.html
+++ b/index.html
@@ -4,14 +4,24 @@
 	<title>Unique Biologist</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	
 	<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-	<style>
+<link href="https://fonts.googleapis.com/css2?family=Aladin&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Flamenco&display=swap" rel="stylesheet">
+	<style type="text/css">
+		h1{
+	font-family: 'Aladin', cursive;
+}
 video {
   width: 100%;
   height: auto;
 }
-</style>
+
+p{
+	font-family: 'Flamenco', cursive;
+}
+	</style>
 </head>
 <body>
 	<h1 class="text-center mt-3">Unique Biologist</h1>
